--- a/python_notebooks/test_generate_plots.ipynb
+++ b/python_notebooks/test_generate_plots.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example vega-lite analysis and creation plot for template\n",
+    "# Example vega-lite analysis & creation plot for template\n",
     "\n",
-    "example from: https://blog.4dcu.be/programming/2021/05/03/Interactive-Visualizations.html"
+    "Example from: https://blog.4dcu.be/programming/2021/05/03/Interactive-Visualizations.html"
    ]
   },
   {
@@ -16,9 +16,8 @@
    "outputs": [],
    "source": [
     "from vega_datasets import data as datasets\n",
-    "\n",
     "source = datasets.cars()\n",
-    "source.rename(columns={\"Miles_per_Gallon\":\"Miles per Gallon\"}, inplace=True)"
+    "source.rename(columns = {\"Miles_per_Gallon\":\"Miles per Gallon\"}, inplace = True)"
    ]
   },
   {
@@ -269,12 +268,11 @@
    "outputs": [],
    "source": [
     "import altair as alt\n",
-    "\n",
-    "chart = alt.Chart(source).mark_circle(size=60).encode(\n",
-    "    x='Horsepower',\n",
-    "    y='Miles per Gallon',\n",
-    "    color='Origin',\n",
-    "    tooltip=['Name', 'Origin', 'Horsepower', 'Miles per Gallon']\n",
+    "chart = alt.Chart(source).mark_circle(size = 60).encode(\n",
+    "    x = \"Horsepower\",\n",
+    "    y = \"Miles per Gallon\",\n",
+    "    color = \"Origin\",\n",
+    "    tooltip = [\"Name\", \"Origin\", \"Horsepower\", \"Miles per Gallon\"]\n",
     ").interactive()"
    ]
   },
@@ -354,18 +352,11 @@
    "source": [
     "chart"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
