--- a/python_notebooks/Workbook.ipynb
+++ b/python_notebooks/Workbook.ipynb
@@ -83,23 +83,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-def15b67129c43a1931336da13fffecf.vega-embed {\n",
+       "  #altair-viz-e726bd612e7442e29cc0e92e3963c4c0.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-def15b67129c43a1931336da13fffecf.vega-embed details,\n",
-       "  #altair-viz-def15b67129c43a1931336da13fffecf.vega-embed details summary {\n",
+       "  #altair-viz-e726bd612e7442e29cc0e92e3963c4c0.vega-embed details,\n",
+       "  #altair-viz-e726bd612e7442e29cc0e92e3963c4c0.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-def15b67129c43a1931336da13fffecf\"></div>\n",
+       "<div id=\"altair-viz-e726bd612e7442e29cc0e92e3963c4c0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-def15b67129c43a1931336da13fffecf\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-def15b67129c43a1931336da13fffecf\");\n",
+       "    if (outputDiv.id !== \"altair-viz-e726bd612e7442e29cc0e92e3963c4c0\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e726bd612e7442e29cc0e92e3963c4c0\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -154,9 +154,8 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -174,7 +173,7 @@
     "\n",
     "# Save Plot 1 to JSON.\n",
     "bar_chart.save(\"../assets/json/bar_chart.json\")\n",
-    "bar_chart"
+    "bar_chart.display()"
    ]
   },
   {
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,23 +211,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3764249057b84bff998df426a9f51900.vega-embed {\n",
+       "  #altair-viz-505a584cf2d849ce85e3db122d14d308.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3764249057b84bff998df426a9f51900.vega-embed details,\n",
-       "  #altair-viz-3764249057b84bff998df426a9f51900.vega-embed details summary {\n",
+       "  #altair-viz-505a584cf2d849ce85e3db122d14d308.vega-embed details,\n",
+       "  #altair-viz-505a584cf2d849ce85e3db122d14d308.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3764249057b84bff998df426a9f51900\"></div>\n",
+       "<div id=\"altair-viz-505a584cf2d849ce85e3db122d14d308\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3764249057b84bff998df426a9f51900\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3764249057b84bff998df426a9f51900\");\n",
+       "    if (outputDiv.id !== \"altair-viz-505a584cf2d849ce85e3db122d14d308\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-505a584cf2d849ce85e3db122d14d308\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -283,9 +282,8 @@
        "alt.VConcatChart(...)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -327,7 +325,7 @@
     "\n",
     "# Save Plot 2 to JSON.\n",
     "area_chart.save(\"../assets/json/area_chart.json\")\n",
-    "area_chart"
+    "area_chart.display()"
    ]
   }
  ],
