--- a/python_notebooks/Workbook.ipynb
+++ b/python_notebooks/Workbook.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# IS 445 Homework #5 Jekyll Webpage - Bigfoot Sightings Visualizations\n",
     "\n",
-    "This Homework showcases 2 visualizations of Bigfoot sighting data from the `bfro_reports_fall2022.csv` dataset, created using Altair, Python, & Vega-Lite. The 1st is a bar chart of sightings by state, & the 2nd is an interactive area chart of temperature over time. These are exported as JSON files & embedded for display on the Jekyll webpage."
+    "This Homework showcases 2 visualizations of Bigfoot sighting data from the [`bfro_reports_fall2022.csv`](https://raw.githubusercontent.com/UIUC-iSchool-DataViz/is445_data/main/bfro_reports_fall2022.csv) dataset, created using Altair, Python, & Vega-Lite. The 1st is a bar chart of sightings by state, & the 2nd is an interactive area chart of temperature over time. These are exported as JSON files & embedded for display on the Jekyll webpage."
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
     "\n",
     "# Save Plot 1 to JSON.\n",
     "bar_chart.save(\"../assets/json/bar_chart.json\")\n",
-    "bar_chart.display()"
+    "bar_chart"
    ]
   },
   {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
     "\n",
     "# Save Plot 2 to JSON.\n",
     "area_chart.save(\"../assets/json/area_chart.json\")\n",
-    "area_chart.display()"
+    "area_chart"
    ]
   }
  ],
