Updating Personal IS 445 Website

--- a/python_notebooks/Workbook.ipynb
+++ b/python_notebooks/Workbook.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# IS 445 Homework #5 Jekyll Webpage - Bigfoot Sightings Visualizations\n",
     "\n",
+    "## Nicholas Wong\n",
+    "\n",
     "This Homework showcases 2 visualizations of Bigfoot sighting data from the [`bfro_reports_fall2022.csv`](https://raw.githubusercontent.com/UIUC-iSchool-DataViz/is445_data/main/bfro_reports_fall2022.csv) dataset, created using Altair, Python, & Vega-Lite. The 1st is a bar chart of sightings by state, & the 2nd is an interactive area chart of temperature over time. These are exported as JSON files & embedded for display on the Jekyll webpage."
    ]
   },
