--- a/python_notebooks/Final_Project_Workbook.ipynb
+++ b/python_notebooks/Final_Project_Workbook.ipynb
@@ -86,23 +86,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3514169cc2b34b1ca20a341f81602320.vega-embed {\n",
+       "  #altair-viz-61054c89e5c94d8ebedb07c943ef4a7d.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3514169cc2b34b1ca20a341f81602320.vega-embed details,\n",
-       "  #altair-viz-3514169cc2b34b1ca20a341f81602320.vega-embed details summary {\n",
+       "  #altair-viz-61054c89e5c94d8ebedb07c943ef4a7d.vega-embed details,\n",
+       "  #altair-viz-61054c89e5c94d8ebedb07c943ef4a7d.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3514169cc2b34b1ca20a341f81602320\"></div>\n",
+       "<div id=\"altair-viz-61054c89e5c94d8ebedb07c943ef4a7d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3514169cc2b34b1ca20a341f81602320\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3514169cc2b34b1ca20a341f81602320\");\n",
+       "    if (outputDiv.id !== \"altair-viz-61054c89e5c94d8ebedb07c943ef4a7d\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-61054c89e5c94d8ebedb07c943ef4a7d\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,23 +198,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-2c83ad8bf23d4bb08e6a584311a2e625.vega-embed {\n",
+       "  #altair-viz-c7a86a50eca641a98f09b69167abbfb5.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-2c83ad8bf23d4bb08e6a584311a2e625.vega-embed details,\n",
-       "  #altair-viz-2c83ad8bf23d4bb08e6a584311a2e625.vega-embed details summary {\n",
+       "  #altair-viz-c7a86a50eca641a98f09b69167abbfb5.vega-embed details,\n",
+       "  #altair-viz-c7a86a50eca641a98f09b69167abbfb5.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-2c83ad8bf23d4bb08e6a584311a2e625\"></div>\n",
+       "<div id=\"altair-viz-c7a86a50eca641a98f09b69167abbfb5\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-2c83ad8bf23d4bb08e6a584311a2e625\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-2c83ad8bf23d4bb08e6a584311a2e625\");\n",
+       "    if (outputDiv.id !== \"altair-viz-c7a86a50eca641a98f09b69167abbfb5\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-c7a86a50eca641a98f09b69167abbfb5\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -269,7 +269,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,14 +286,14 @@
     "    height = 300\n",
     ")\n",
     "\n",
-    "# Save to JSON.\n",
-    "bar.save(\"../assets/json/crime_chart.json\")\n",
+    "# Save to PNG.\n",
+    "bar.save(\"../assets/pngs/crime_chart.png\")\n",
     "bar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -301,23 +301,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-efc8faadd536473e8d3979c549fa3bf0.vega-embed {\n",
+       "  #altair-viz-369c0c9582fe4a0eb839196535f185de.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-efc8faadd536473e8d3979c549fa3bf0.vega-embed details,\n",
-       "  #altair-viz-efc8faadd536473e8d3979c549fa3bf0.vega-embed details summary {\n",
+       "  #altair-viz-369c0c9582fe4a0eb839196535f185de.vega-embed details,\n",
+       "  #altair-viz-369c0c9582fe4a0eb839196535f185de.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-efc8faadd536473e8d3979c549fa3bf0\"></div>\n",
+       "<div id=\"altair-viz-369c0c9582fe4a0eb839196535f185de\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-efc8faadd536473e8d3979c549fa3bf0\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-efc8faadd536473e8d3979c549fa3bf0\");\n",
+       "    if (outputDiv.id !== \"altair-viz-369c0c9582fe4a0eb839196535f185de\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-369c0c9582fe4a0eb839196535f185de\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -372,7 +372,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,8 +391,8 @@
     "    height = 300\n",
     ")\n",
     "\n",
-    "# Save to JSON.\n",
-    "bar_crime.save(\"../assets/json/bar_crime_chart.json\")\n",
+    "# Save to PNG.\n",
+    "bar_crime.save(\"../assets/pngs/bar_crime_chart.png\")\n",
     "bar_crime"
    ]
   }
