Updating Personal IS 445 Website

--- a/python_notebooks/Final_Project_Workbook.ipynb
+++ b/python_notebooks/Final_Project_Workbook.ipynb
@@ -86,23 +86,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-e33e75ba241b4605a3956bbd4b424cf2.vega-embed {\n",
+       "  #altair-viz-2bdf6fc38440462f98ae5c032722b9fd.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-e33e75ba241b4605a3956bbd4b424cf2.vega-embed details,\n",
-       "  #altair-viz-e33e75ba241b4605a3956bbd4b424cf2.vega-embed details summary {\n",
+       "  #altair-viz-2bdf6fc38440462f98ae5c032722b9fd.vega-embed details,\n",
+       "  #altair-viz-2bdf6fc38440462f98ae5c032722b9fd.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-e33e75ba241b4605a3956bbd4b424cf2\"></div>\n",
+       "<div id=\"altair-viz-2bdf6fc38440462f98ae5c032722b9fd\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-e33e75ba241b4605a3956bbd4b424cf2\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-e33e75ba241b4605a3956bbd4b424cf2\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2bdf6fc38440462f98ae5c032722b9fd\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2bdf6fc38440462f98ae5c032722b9fd\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -198,23 +198,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-da03bab593c14bd38c478709655219a6.vega-embed {\n",
+       "  #altair-viz-340e5ee82130417395ff57974b7add1f.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-da03bab593c14bd38c478709655219a6.vega-embed details,\n",
-       "  #altair-viz-da03bab593c14bd38c478709655219a6.vega-embed details summary {\n",
+       "  #altair-viz-340e5ee82130417395ff57974b7add1f.vega-embed details,\n",
+       "  #altair-viz-340e5ee82130417395ff57974b7add1f.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-da03bab593c14bd38c478709655219a6\"></div>\n",
+       "<div id=\"altair-viz-340e5ee82130417395ff57974b7add1f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-da03bab593c14bd38c478709655219a6\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-da03bab593c14bd38c478709655219a6\");\n",
+       "    if (outputDiv.id !== \"altair-viz-340e5ee82130417395ff57974b7add1f\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-340e5ee82130417395ff57974b7add1f\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -286,8 +286,8 @@
     "    height = 300\n",
     ")\n",
     "\n",
-    "# Save to PNG.\n",
-    "bar.save(\"../_projects/images/crime_chart.png\")\n",
+    "# Save to JSON.\n",
+    "bar.save(\"../assets/json/crime_chart.json\")\n",
     "bar"
    ]
   },
@@ -301,23 +301,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-b2ed9ee60d9d443da7c5c7dc4282d7aa.vega-embed {\n",
+       "  #altair-viz-943587b04c7349c2b7fa741e0ba4071c.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-b2ed9ee60d9d443da7c5c7dc4282d7aa.vega-embed details,\n",
-       "  #altair-viz-b2ed9ee60d9d443da7c5c7dc4282d7aa.vega-embed details summary {\n",
+       "  #altair-viz-943587b04c7349c2b7fa741e0ba4071c.vega-embed details,\n",
+       "  #altair-viz-943587b04c7349c2b7fa741e0ba4071c.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-b2ed9ee60d9d443da7c5c7dc4282d7aa\"></div>\n",
+       "<div id=\"altair-viz-943587b04c7349c2b7fa741e0ba4071c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-b2ed9ee60d9d443da7c5c7dc4282d7aa\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-b2ed9ee60d9d443da7c5c7dc4282d7aa\");\n",
+       "    if (outputDiv.id !== \"altair-viz-943587b04c7349c2b7fa741e0ba4071c\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-943587b04c7349c2b7fa741e0ba4071c\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -391,8 +391,8 @@
     "    height = 300\n",
     ")\n",
     "\n",
-    "# Save to PNG.\n",
-    "bar_crime.save(\"../_projects/images/bar_crime_chart.png\")\n",
+    "# Save to JSON.\n",
+    "bar_crime.save(\"../assets/json/bar_crime_chart.json\")\n",
     "bar_crime"
    ]
   }
