Updating Personal IS 445 Website

--- a/python_notebooks/Final_Project_Workbook.ipynb
+++ b/python_notebooks/Final_Project_Workbook.ipynb
@@ -86,23 +86,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-2bdf6fc38440462f98ae5c032722b9fd.vega-embed {\n",
+       "  #altair-viz-a24c4fd7ca46458db46304a8df80806b.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-2bdf6fc38440462f98ae5c032722b9fd.vega-embed details,\n",
-       "  #altair-viz-2bdf6fc38440462f98ae5c032722b9fd.vega-embed details summary {\n",
+       "  #altair-viz-a24c4fd7ca46458db46304a8df80806b.vega-embed details,\n",
+       "  #altair-viz-a24c4fd7ca46458db46304a8df80806b.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-2bdf6fc38440462f98ae5c032722b9fd\"></div>\n",
+       "<div id=\"altair-viz-a24c4fd7ca46458db46304a8df80806b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-2bdf6fc38440462f98ae5c032722b9fd\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-2bdf6fc38440462f98ae5c032722b9fd\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a24c4fd7ca46458db46304a8df80806b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a24c4fd7ca46458db46304a8df80806b\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -198,23 +198,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-340e5ee82130417395ff57974b7add1f.vega-embed {\n",
+       "  #altair-viz-bab3192ce0694d26a0b9aafdce89a6ca.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-340e5ee82130417395ff57974b7add1f.vega-embed details,\n",
-       "  #altair-viz-340e5ee82130417395ff57974b7add1f.vega-embed details summary {\n",
+       "  #altair-viz-bab3192ce0694d26a0b9aafdce89a6ca.vega-embed details,\n",
+       "  #altair-viz-bab3192ce0694d26a0b9aafdce89a6ca.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-340e5ee82130417395ff57974b7add1f\"></div>\n",
+       "<div id=\"altair-viz-bab3192ce0694d26a0b9aafdce89a6ca\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-340e5ee82130417395ff57974b7add1f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-340e5ee82130417395ff57974b7add1f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-bab3192ce0694d26a0b9aafdce89a6ca\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-bab3192ce0694d26a0b9aafdce89a6ca\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -301,23 +301,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-943587b04c7349c2b7fa741e0ba4071c.vega-embed {\n",
+       "  #altair-viz-a0c81babe30141709c617e35bb9fa81b.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-943587b04c7349c2b7fa741e0ba4071c.vega-embed details,\n",
-       "  #altair-viz-943587b04c7349c2b7fa741e0ba4071c.vega-embed details summary {\n",
+       "  #altair-viz-a0c81babe30141709c617e35bb9fa81b.vega-embed details,\n",
+       "  #altair-viz-a0c81babe30141709c617e35bb9fa81b.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-943587b04c7349c2b7fa741e0ba4071c\"></div>\n",
+       "<div id=\"altair-viz-a0c81babe30141709c617e35bb9fa81b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-943587b04c7349c2b7fa741e0ba4071c\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-943587b04c7349c2b7fa741e0ba4071c\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a0c81babe30141709c617e35bb9fa81b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a0c81babe30141709c617e35bb9fa81b\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -379,7 +379,7 @@
    ],
    "source": [
     "# Contextual Visualization 2: Self-generated bar chart of top crime types.\n",
-    "crime_counts = df_crime[\"Primary Type\"].value_counts().head(5).reset_index()\n",
+    "crime_counts = df_crime[\"Primary Type\"].value_counts().head().reset_index()\n",
     "crime_counts.columns = [\"Crime Type\", \"Count\"]\n",
     "bar_crime = alt.Chart(crime_counts).mark_bar().encode(\n",
     "    x = alt.X(\"Crime Type:N\", title = \"Crime Type\", sort = \"-y\"),\n",
